tui/src/ui/snapshots/ai_skill__ui__status_bar__tests__snapshot_detail_view.snap
---
source: tui/src/ui/status_bar.rs
expression: terminal.backend().buffer().clone()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 84, height: 1 },
    content: [
        "j/k scroll  d diff  Esc back  q quit                                                ",
    ],
    styles: [
        x: 0, y: 0, fg: Black, bg: DarkGray, underline: Reset, modifier: NONE,
    ]
}
