tui/src/ui/snapshots/ai_skill__ui__status_bar__tests__snapshot_list_view.snap
---
source: tui/src/ui/status_bar.rs
expression: terminal.backend().buffer().clone()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 84, height: 1 },
    content: [
        "↑↓ navigate  Enter explore  Ctrl+P commands  Ctrl-C quit                            ",
    ],
    styles: [
        x: 0, y: 0, fg: Black, bg: DarkGray, underline: Reset, modifier: NONE,
    ]
}
